package org.share.tunnel.proto.login;

// 10000
message roleLoginRequest{
	optional string userName  = 1;
	optional string passWord = 2;
}

// 10001
message roleLoginResponse {
	optional string userName = 1;
	optional int32 status = 2;// 登陆是否成功状态
}


// 10002
message roleLoginOutRequest {
	optional string userName = 1;
}

// 10003
message roleLoginOutResponse {
	optional string userName = 1;
	optional bool success = 2;
}